--- a/Demo/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Demo/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -149,10 +149,11 @@ AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+LastLevel=/Game/Maps/Classroom002
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/AdvancedLocomotionV4/Blueprints/CharacterLogic/ALS_AnimMan_CharacterBP.ALS_AnimMan_CharacterBP
 
 [RootWindow]
 ScreenPosition=X=135.000 Y=96.000
@@ -1020,12 +1021,14 @@ MRUItem1=/Game/OldClassroom/Maps/Classroom
 MRUItem2=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Maps/Classroom002
-MRUItem1=/Game/OldClassroom/Maps/Classroom
-MRUItem2=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem3=/Game/OldClassroom/Meshes/SM_desk
-MRUItem4=/Game/OldClassroom/Meshes/SM_cart
-MRUItem5=/Game/OldClassroom/Meshes/SM_teacherDesk
+MRUItem0=/Game/Waveli/Character/BP_AnimMan_Character_Mini
+MRUItem1=/Game/AdvancedLocomotionV4/Blueprints/CharacterLogic/ALS_AnimMan_CharacterBP
+MRUItem2=/Game/Maps/Classroom002
+MRUItem3=/Game/OldClassroom/Maps/Classroom
+MRUItem4=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem5=/Game/OldClassroom/Meshes/SM_desk
+MRUItem6=/Game/OldClassroom/Meshes/SM_cart
+MRUItem7=/Game/OldClassroom/Meshes/SM_teacherDesk
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1115,7 +1118,7 @@ SpringArmComponent.Activation=True
 SpringArmComponent.ComponentReplication=True
 SpringArmComponent.Tags=True
 SpringArmComponent.Rendering=True
-SpringArmComponent.Lag=True
+SpringArmComponent.Lag=False
 SpringArmComponent.ComponentTick=True
 SpringArmComponent.CameraSettings=True
 SpringArmComponent.CameraCollision=True
@@ -1610,6 +1613,78 @@ RecastNavMesh.LOD=True
 RecastNavMesh.Cooking=True
 AndroidRuntimeSettings.AdvancedBuild=True
 AndroidRuntimeSettings.Project SDK Override=True
+ALS_AnimMan_CharacterBP_C.Tick=True
+ALS_AnimMan_CharacterBP_C.Camera System=True
+ALS_AnimMan_CharacterBP_C.Colors=True
+ALS_AnimMan_CharacterBP_C.Movement System=True
+ALS_AnimMan_CharacterBP_C.Mantle System=True
+ALS_AnimMan_CharacterBP_C.Mantle Animations=True
+ALS_AnimMan_CharacterBP_C.Roll Animations=True
+ALS_AnimMan_CharacterBP_C.Ragdoll System=True
+ALS_AnimMan_CharacterBP_C.GetUpAnimations=True
+ALS_AnimMan_CharacterBP_C.State Values=True
+ALS_AnimMan_CharacterBP_C.Input=True
+ALS_AnimMan_CharacterBP_C.References=True
+ALS_AnimMan_CharacterBP_C.Character=True
+ALS_AnimMan_CharacterBP_C.Camera=True
+ALS_AnimMan_CharacterBP_C.Pawn=True
+ALS_AnimMan_CharacterBP_C.Replication=True
+ALS_AnimMan_CharacterBP_C.Rendering=True
+ALS_AnimMan_CharacterBP_C.Collision=True
+ALS_AnimMan_CharacterBP_C.Actor=True
+ALS_AnimMan_CharacterBP_C.LOD=False
+ALS_AnimMan_CharacterBP_C.Cooking=False
+CharacterMovementComponent.RootMotion=True
+CharacterMovementComponent.Character Movement: Avoidance=True
+CharacterMovementComponent.Character Movement=True
+CharacterMovementComponent.Character Movement: Physics Interaction=True
+CharacterMovementComponent.Character Movement (Rotation Settings)=True
+CharacterMovementComponent.Character Movement: Custom Movement=True
+CharacterMovementComponent.Character Movement: Flying=True
+CharacterMovementComponent.Character Movement: Swimming=True
+CharacterMovementComponent.Character Movement (Networking)=True
+CharacterMovementComponent.ComponentTick=True
+CharacterMovementComponent.Character Movement: Jumping / Falling=True
+CharacterMovementComponent.Character Movement: Walking=True
+CharacterMovementComponent.Character Movement (General Settings)=True
+CharacterMovementComponent.Sockets=True
+CharacterMovementComponent.Variable=True
+CharacterMovementComponent.Character Movement: NavMesh Movement=True
+CharacterMovementComponent.NavMovement=True
+CharacterMovementComponent.Velocity=True
+CharacterMovementComponent.PlanarMovement=True
+CharacterMovementComponent.MovementComponent=True
+CharacterMovementComponent.Tags=True
+CharacterMovementComponent.ComponentReplication=True
+CharacterMovementComponent.Activation=True
+CharacterMovementComponent.Cooking=True
+CharacterMovementComponent.Events=True
+CharacterMovementComponent.AssetUserData=True
+CharacterMovementComponent.Collision=True
+BP_AnimMan_Character_Mini_C.Tick=True
+BP_AnimMan_Character_Mini_C.Colors=True
+BP_AnimMan_Character_Mini_C.Mantle Animations=True
+BP_AnimMan_Character_Mini_C.Roll Animations=True
+BP_AnimMan_Character_Mini_C.GetUpAnimations=True
+BP_AnimMan_Character_Mini_C.State Values=True
+BP_AnimMan_Character_Mini_C.Input=True
+BP_AnimMan_Character_Mini_C.Movement System=True
+BP_AnimMan_Character_Mini_C.Mantle System=True
+BP_AnimMan_Character_Mini_C.References=True
+BP_AnimMan_Character_Mini_C.Ragdoll System=True
+BP_AnimMan_Character_Mini_C.Camera System=True
+BP_AnimMan_Character_Mini_C.Character=True
+BP_AnimMan_Character_Mini_C.Camera=True
+BP_AnimMan_Character_Mini_C.Pawn=True
+BP_AnimMan_Character_Mini_C.Replication=True
+BP_AnimMan_Character_Mini_C.Rendering=True
+BP_AnimMan_Character_Mini_C.Collision=True
+BP_AnimMan_Character_Mini_C.Actor=True
+CapsuleComponent.HLOD=False
+CapsuleComponent.Mobile=False
+CapsuleComponent.AssetUserData=False
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.Events=True
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -1624,6 +1699,7 @@ InstalledPlugins=NodeGraphAssistant
 InstalledPlugins=XRVisualization
 
 [PlacementMode]
+RecentlyPlaced=/Game/Waveli/Character/BP_AnimMan_Character_Mini.BP_AnimMan_Character_Mini;
 RecentlyPlaced=/Game/OldClassroom/Meshes/SM_teacherDesk.SM_teacherDesk;
 
 [MessageLog]
@@ -1745,10 +1821,23 @@ MagicLeapSDKSettings=True
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
-Object=
+Object="\"Object.PostProcess.PostProcessSettings\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[2]\" \"Object.Bindings.ActionMappings.ActionMappings[5]\" \"Object.Bindings.ActionMappings.ActionMappings[6]\" \"Object.Bindings.ActionMappings.ActionMappings[7]\" \"Object.Bindings.ActionMappings.ActionMappings[8]\" \"Object.Bindings.ActionMappings.ActionMappings[9]\" \"Object.Bindings.ActionMappings.ActionMappings[10]\" \"Object.Bindings.ActionMappings.ActionMappings[11]\" \"Object.Bindings.ActionMappings.ActionMappings[14]\" \"Object.Bindings.ActionMappings.ActionMappings[16]\" \"Object.Bindings.ActionMappings.ActionMappings[18]\" \"Object.Bindings.ActionMappings.ActionMappings[19]\" \"Object.Bindings.ActionMappings.ActionMappings[20]\" \"Object.Bindings.ActionMappings.ActionMappings[21]\" \"Object.Bindings.ActionMappings.ActionMappings[22]\" \"Object.Bindings.ActionMappings.ActionMappings[23]\" \"Object.Bindings.AxisMappings.AxisMappings[9]\" "
+CharacterMovementComponent="\"Object.NavMovement.NavAgentProps\" "
+PawnMovementComponent="\"Object.NavMovement.NavAgentProps\" "
+NavMovementComponent="\"Object.NavMovement.NavAgentProps\" "
+MovementComponent="\"Object.NavMovement.NavAgentProps\" "
+ActorComponent="\"Object.PostProcess.PostProcessSettings\" "
+CapsuleComponent=
+ShapeComponent=
+PrimitiveComponent=
+SceneComponent="\"Object.PostProcess.PostProcessSettings\" "
+CameraComponent="\"Object.PostProcess.PostProcessSettings\" "
+SkeletalMeshComponent="\"Object.Collision.BodyInstance\" "
+SkinnedMeshComponent="\"Object.Collision.BodyInstance\" "
+MeshComponent="\"Object.Collision.BodyInstance\" "
 
 [DetailCustomWidgetExpansion]
 CryptoKeysSettings=InputSettings.Bindings.ActionMappings.JumpAction,InputSettings.Bindings.ActionMappings.StanceAction,InputSettings.Bindings.ActionMappings.SprintAction,InputSettings.Bindings.ActionMappings.WalkAction,InputSettings.Bindings.ActionMappings.AimAction,InputSettings.Bindings.ActionMappings.SelectRotationMode_1,InputSettings.Bindings.ActionMappings.SelectRotationMode_2,InputSettings.Bindings.ActionMappings.CameraAction,InputSettings.Bindings.ActionMappings.RagdollAction,InputSettings.Bindings.ActionMappings.CycleOverlayUp,InputSettings.Bindings.ActionMappings.CycleOverlayDown,InputSettings.Bindings.ActionMappings.OpenOverlayMenu,InputSettings.Bindings.AxisMappings.MoveForward/Backwards,InputSettings.Bindings.AxisMappings.MoveRight/Left,InputSettings.Bindings.AxisMappings.LookUp/Down,InputSettings.Bindings.AxisMappings.LookLeft/Right,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,
@@ -1820,4 +1909,8 @@ TcpMessagingSettings=InputSettings.Bindings.ActionMappings.JumpAction,InputSetti
 TemplateSequenceEditorSettings=InputSettings.Bindings.ActionMappings.JumpAction,InputSettings.Bindings.ActionMappings.StanceAction,InputSettings.Bindings.ActionMappings.SprintAction,InputSettings.Bindings.ActionMappings.WalkAction,InputSettings.Bindings.ActionMappings.AimAction,InputSettings.Bindings.ActionMappings.SelectRotationMode_1,InputSettings.Bindings.ActionMappings.SelectRotationMode_2,InputSettings.Bindings.ActionMappings.CameraAction,InputSettings.Bindings.ActionMappings.RagdollAction,InputSettings.Bindings.ActionMappings.CycleOverlayUp,InputSettings.Bindings.ActionMappings.CycleOverlayDown,InputSettings.Bindings.ActionMappings.OpenOverlayMenu,InputSettings.Bindings.AxisMappings.MoveForward/Backwards,InputSettings.Bindings.AxisMappings.MoveRight/Left,InputSettings.Bindings.AxisMappings.LookUp/Down,InputSettings.Bindings.AxisMappings.LookLeft/Right,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings.JumpAction,InputSettings.Bindings.ActionMappings.StanceAction,InputSettings.Bindings.ActionMappings.SprintAction,InputSettings.Bindings.ActionMappings.WalkAction,InputSettings.Bindings.ActionMappings.AimAction,InputSettings.Bindings.ActionMappings.SelectRotationMode_1,InputSettings.Bindings.ActionMappings.SelectRotationMode_2,InputSettings.Bindings.ActionMappings.CameraAction,InputSettings.Bindings.ActionMappings.RagdollAction,InputSettings.Bindings.ActionMappings.CycleOverlayUp,InputSettings.Bindings.ActionMappings.CycleOverlayDown,InputSettings.Bindings.ActionMappings.OpenOverlayMenu,InputSettings.Bindings.AxisMappings.MoveForward/Backwards,InputSettings.Bindings.AxisMappings.MoveRight/Left,InputSettings.Bindings.AxisMappings.LookUp/Down,InputSettings.Bindings.AxisMappings.LookLeft/Right,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings.JumpAction,InputSettings.Bindings.ActionMappings.StanceAction,InputSettings.Bindings.ActionMappings.SprintAction,InputSettings.Bindings.ActionMappings.WalkAction,InputSettings.Bindings.ActionMappings.AimAction,InputSettings.Bindings.ActionMappings.SelectRotationMode_1,InputSettings.Bindings.ActionMappings.SelectRotationMode_2,InputSettings.Bindings.ActionMappings.CameraAction,InputSettings.Bindings.ActionMappings.RagdollAction,InputSettings.Bindings.ActionMappings.CycleOverlayUp,InputSettings.Bindings.ActionMappings.CycleOverlayDown,InputSettings.Bindings.ActionMappings.OpenOverlayMenu,InputSettings.Bindings.AxisMappings.MoveForward/Backwards,InputSettings.Bindings.AxisMappings.MoveRight/Left,InputSettings.Bindings.AxisMappings.LookUp/Down,InputSettings.Bindings.AxisMappings.LookLeft/Right,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,
+CapsuleComponent=
+CameraComponent=CameraComponent.PostProcess.Lens|Exposure,CameraComponent.PostProcess.Lens|Camera,CameraComponent.PostProcess.Lens,
+BP_AnimMan_Character_Mini_C=
+K2Node_VariableGet=CapsuleComponent.Physics.ConstraintsGroup,
 
