mini character process
mini character process

--- a/Demo/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Demo/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -144,7 +144,7 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Maps
+ContentBrowserTab1.SelectedPaths=/Game/Waveli/Character
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 
@@ -152,8 +152,9 @@ AssetDialog.CurrentViewType=1
 LastLevel=/Game/Maps/Classroom002
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/AdvancedLocomotionV4/Blueprints/CharacterLogic/ALS_AnimMan_CharacterBP.ALS_AnimMan_CharacterBP
+OpenAssetsAtExit=/Game/Waveli/Character/BP_AnimMan_Character_Mini.BP_AnimMan_Character_Mini
 
 [RootWindow]
 ScreenPosition=X=135.000 Y=96.000
@@ -1014,6 +1015,8 @@ ExternalImagePicker.TimeStamp=2021.10.18-16.41.16
 ExternalImagePicker.LastCompileMethod=Unknown
 NodeGraphAssistant.TimeStamp=2021.10.29-06.14.16
 NodeGraphAssistant.LastCompileMethod=Unknown
+BlueprintGraph.TimeStamp=2021.10.18-16.41.11
+BlueprintGraph.LastCompileMethod=Unknown
 
 [MRU]
 MRUItem0=/Game/Maps/Classroom002
@@ -1913,4 +1916,5 @@ CapsuleComponent=
 CameraComponent=CameraComponent.PostProcess.Lens|Exposure,CameraComponent.PostProcess.Lens|Camera,CameraComponent.PostProcess.Lens,
 BP_AnimMan_Character_Mini_C=
 K2Node_VariableGet=CapsuleComponent.Physics.ConstraintsGroup,
+WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 
