--- a/Demo/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Demo/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -149,12 +149,10 @@ AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/Maps/Classroom002
+LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/AdvancedLocomotionV4/Blueprints/CharacterLogic/ALS_AnimMan_CharacterBP.ALS_AnimMan_CharacterBP
-OpenAssetsAtExit=/Game/Waveli/Character/BP_AnimMan_Character_Mini.BP_AnimMan_Character_Mini
 
 [RootWindow]
 ScreenPosition=X=135.000 Y=96.000
@@ -175,7 +173,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=D:/GameJam2021/GameJ/Demo/Content/Maps
+UNR=D:/GameJam2021/GameJ/Demo/Content/ThirdPersonBP/Maps
 BRUSH=../../../../../../DEMO/Demo/Content/
 FBX=../../../../../../DEMO/Demo/Content/
 FBXAnim=../../../../../../DEMO/Demo/Content/
@@ -1019,9 +1017,9 @@ BlueprintGraph.TimeStamp=2021.10.18-16.41.11
 BlueprintGraph.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/Maps/Classroom002
-MRUItem1=/Game/OldClassroom/Maps/Classroom
-MRUItem2=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem0=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem1=/Game/Maps/Classroom002
+MRUItem2=/Game/OldClassroom/Maps/Classroom
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Waveli/Character/BP_AnimMan_Character_Mini
@@ -1913,7 +1911,7 @@ TemplateSequenceEditorSettings=InputSettings.Bindings.ActionMappings.JumpAction,
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings.JumpAction,InputSettings.Bindings.ActionMappings.StanceAction,InputSettings.Bindings.ActionMappings.SprintAction,InputSettings.Bindings.ActionMappings.WalkAction,InputSettings.Bindings.ActionMappings.AimAction,InputSettings.Bindings.ActionMappings.SelectRotationMode_1,InputSettings.Bindings.ActionMappings.SelectRotationMode_2,InputSettings.Bindings.ActionMappings.CameraAction,InputSettings.Bindings.ActionMappings.RagdollAction,InputSettings.Bindings.ActionMappings.CycleOverlayUp,InputSettings.Bindings.ActionMappings.CycleOverlayDown,InputSettings.Bindings.ActionMappings.OpenOverlayMenu,InputSettings.Bindings.AxisMappings.MoveForward/Backwards,InputSettings.Bindings.AxisMappings.MoveRight/Left,InputSettings.Bindings.AxisMappings.LookUp/Down,InputSettings.Bindings.AxisMappings.LookLeft/Right,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings.JumpAction,InputSettings.Bindings.ActionMappings.StanceAction,InputSettings.Bindings.ActionMappings.SprintAction,InputSettings.Bindings.ActionMappings.WalkAction,InputSettings.Bindings.ActionMappings.AimAction,InputSettings.Bindings.ActionMappings.SelectRotationMode_1,InputSettings.Bindings.ActionMappings.SelectRotationMode_2,InputSettings.Bindings.ActionMappings.CameraAction,InputSettings.Bindings.ActionMappings.RagdollAction,InputSettings.Bindings.ActionMappings.CycleOverlayUp,InputSettings.Bindings.ActionMappings.CycleOverlayDown,InputSettings.Bindings.ActionMappings.OpenOverlayMenu,InputSettings.Bindings.AxisMappings.MoveForward/Backwards,InputSettings.Bindings.AxisMappings.MoveRight/Left,InputSettings.Bindings.AxisMappings.LookUp/Down,InputSettings.Bindings.AxisMappings.LookLeft/Right,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,
 CapsuleComponent=
-CameraComponent=CameraComponent.PostProcess.Lens|Exposure,CameraComponent.PostProcess.Lens|Camera,CameraComponent.PostProcess.Lens,
+CameraComponent=CameraComponent.PostProcess.Lens
 BP_AnimMan_Character_Mini_C=
 K2Node_VariableGet=CapsuleComponent.Physics.ConstraintsGroup,
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
