--- a/Demo/Demo.uproject
+++ b/Demo/Demo.uproject
@@ -6,7 +6,7 @@
 	"Plugins": [
 		{
 			"Name": "NodeGraphAssistant",
-			"Enabled": true,
+			"Enabled": false,
 			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/d9baaaeadeaf41dcb52b3f6e134e9514"
 		}
 	]
